--- a/school.ipynb
+++ b/school.ipynb
@@ -31,20 +31,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: shapely in /opt/conda/lib/python2.7/site-packages\r\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>URN</th>\n",
+       "      <th>SCHOOL_NAM</th>\n",
+       "      <th>TYPE</th>\n",
+       "      <th>PHASE</th>\n",
+       "      <th>ADDRESS</th>\n",
+       "      <th>TOWN</th>\n",
+       "      <th>POSTCODE</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>GENDER</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LA_NAME</th>\n",
+       "      <th>WEBLINK</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>map_icon</th>\n",
+       "      <th>NEW_URN</th>\n",
+       "      <th>OLD_URN</th>\n",
+       "      <th>map_icon_l</th>\n",
+       "      <th>Primary</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>135155</td>\n",
+       "      <td>Ayesha Siddiqa Girls School</td>\n",
+       "      <td>Other Independent School</td>\n",
+       "      <td>Not applicable</td>\n",
+       "      <td>165-169 The Broadway</td>\n",
+       "      <td>Southall</td>\n",
+       "      <td>UB1 1LR</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>Girls</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Ealing</td>\n",
+       "      <td></td>\n",
+       "      <td>19-Nov</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.378496</td>\n",
+       "      <td>51.507500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>140492</td>\n",
+       "      <td>Beis Medrash Elyon</td>\n",
+       "      <td>Other Independent School</td>\n",
+       "      <td>Not applicable</td>\n",
+       "      <td>233 West Hendon Broadway</td>\n",
+       "      <td>London</td>\n",
+       "      <td>NW9 7DG</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>Boys</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Barnet</td>\n",
+       "      <td></td>\n",
+       "      <td>16-Nov</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.241628</td>\n",
+       "      <td>51.578999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>141411</td>\n",
+       "      <td>Big Creative Independent School</td>\n",
+       "      <td>Other Independent School</td>\n",
+       "      <td>Not applicable</td>\n",
+       "      <td>Silver Birch House</td>\n",
+       "      <td>Walthamstow</td>\n",
+       "      <td>E17 5SD</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>Mixed</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Waltham Forest</td>\n",
+       "      <td></td>\n",
+       "      <td>15 - 16</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.042590</td>\n",
+       "      <td>51.594002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>142336</td>\n",
+       "      <td>Wetherby Senior School</td>\n",
+       "      <td>Other Independent School</td>\n",
+       "      <td>Not applicable</td>\n",
+       "      <td>100 Marylebone Lane</td>\n",
+       "      <td>London</td>\n",
+       "      <td>W1U 2QB</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>Boys</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Westminster</td>\n",
+       "      <td></td>\n",
+       "      <td>16-Nov</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.150409</td>\n",
+       "      <td>51.517601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>100042</td>\n",
+       "      <td>St Mary's Kilburn Church of England Primary Sc...</td>\n",
+       "      <td>Voluntary Aided School</td>\n",
+       "      <td>Primary</td>\n",
+       "      <td>Quex Road</td>\n",
+       "      <td>London</td>\n",
+       "      <td>NW6 4PG</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>Mixed</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Camden</td>\n",
+       "      <td>http://www.stmarykilburn.camden.sch.uk/</td>\n",
+       "      <td>11-Mar</td>\n",
+       "      <td>VOLUNTARY</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.193367</td>\n",
+       "      <td>51.540402</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  OBJECTID     URN                                         SCHOOL_NAM  \\\n",
+       "0        1  135155                        Ayesha Siddiqa Girls School   \n",
+       "1        2  140492                                 Beis Medrash Elyon   \n",
+       "2        3  141411                    Big Creative Independent School   \n",
+       "3        4  142336                             Wetherby Senior School   \n",
+       "4        5  100042  St Mary's Kilburn Church of England Primary Sc...   \n",
+       "\n",
+       "                       TYPE           PHASE                   ADDRESS  \\\n",
+       "0  Other Independent School  Not applicable      165-169 The Broadway   \n",
+       "1  Other Independent School  Not applicable  233 West Hendon Broadway   \n",
+       "2  Other Independent School  Not applicable        Silver Birch House   \n",
+       "3  Other Independent School  Not applicable       100 Marylebone Lane   \n",
+       "4    Voluntary Aided School         Primary                 Quex Road   \n",
+       "\n",
+       "          TOWN POSTCODE STATUS GENDER    ...             LA_NAME  \\\n",
+       "0     Southall  UB1 1LR   Open  Girls    ...              Ealing   \n",
+       "1       London  NW9 7DG   Open   Boys    ...              Barnet   \n",
+       "2  Walthamstow  E17 5SD   Open  Mixed    ...      Waltham Forest   \n",
+       "3       London  W1U 2QB   Open   Boys    ...         Westminster   \n",
+       "4       London  NW6 4PG   Open  Mixed    ...              Camden   \n",
+       "\n",
+       "                                   WEBLINK      AGE   map_icon NEW_URN  \\\n",
+       "0                                            19-Nov                      \n",
+       "1                                            16-Nov                      \n",
+       "2                                           15 - 16                      \n",
+       "3                                            16-Nov                      \n",
+       "4  http://www.stmarykilburn.camden.sch.uk/   11-Mar  VOLUNTARY           \n",
+       "\n",
+       "  OLD_URN map_icon_l Primary         x          y  \n",
+       "0                  2       0 -0.378496  51.507500  \n",
+       "1                  2       0 -0.241628  51.578999  \n",
+       "2                  2       0 -0.042590  51.594002  \n",
+       "3                  2       0 -0.150409  51.517601  \n",
+       "4                  2       1 -0.193367  51.540402  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
